export enum DigitalPlatformEnumeration {
  MobileWebPlatform,
  AndroidPlatform,
  GenericWebPlatform,
  DesktopWebPlatform,
  IOSPlatform,
}
