classDiagram
  EntryPoint -- SoftwareApplication
  EntryPoint -- DigitalPlatformEnumeration


class EntryPoint {

  SoftwareApplication actionApplication
  SoftwareApplication application
  string actionPlatform
  string actionPlatform
  DigitalPlatformEnumeration actionPlatform
  string httpMethod
  string urlTemplate
  string encodingType
  string contentType

 }
